# opensubtitles-dataloader

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: quickstart.ipynb
opensubtitles_dataloader/: __init__.py  __main__.py
